@@ -1,3 +1,7 @@
+2010-01-20  Glenn Morris  <rgm@gnu.org>
+
+	* indent.el (tab-always-indent): Fix custom-type.
+
 2010-01-19  Alan Mackenzie  <acm@muc.de>
 
 	* progmodes/cc-defs.el: Fix bug#5395: typing '#' in an empty
